# getpayslip

./: .gitignore  Pipfile  README.md  config.example.py  config.py  date_utils.py  deploy.sh  fabfile.py  justfile  log.py  main.py  payslip.py  pyproject.toml  requirements.txt  run.sh  settings.py  test_.py
.github/workflows/: ci.yml
lib/: date_utils.py  payslip.py
tests/: test_core.py
