[project]
name = "getpayslip"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
    "prettyconf>=2.3.0",
    "pypdf2>=3.0.1",
    "selenium>=4.32.0",
    "sendgrify>=2.0.3",
    "urllib3>=2.4.0",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
]
